--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,47 @@
 /*.suo
 /*.user
+Api/*.suo
+Api/*.user
+Api/Debug
+Api/Properties/*.suo
+Api/Properties/*.user
+Api/Properties/Debug
+Api/Properties/Release
+Api/Properties/Thumbs.db
+Api/Properties/_ReSharper*
+Api/Properties/bin
+Api/Properties/obj
+Api/Release
+Api/Thumbs.db
+Api/Types/*.suo
+Api/Types/*.user
+Api/Types/Debug
+Api/Types/Release
+Api/Types/Thumbs.db
+Api/Types/_ReSharper*
+Api/Types/bin
+Api/Types/obj
+Api/_ReSharper*
+Api/bin
+Api/obj
 /Debug
 /Release
+Test/*.suo
+Test/*.user
+Test/Debug
+Test/Properties/*.suo
+Test/Properties/*.user
+Test/Properties/Debug
+Test/Properties/Release
+Test/Properties/Thumbs.db
+Test/Properties/_ReSharper*
+Test/Properties/bin
+Test/Properties/obj
+Test/Release
+Test/Thumbs.db
+Test/_ReSharper*
+Test/bin
+Test/obj
 /Thumbs.db
 /_ReSharper*
 /bin
