--- a/.gitattributes
+++ b/.gitattributes
@@ -1,11 +1,13 @@
 * text=auto !eol
 Api/Api.csproj -text
 Api/Properties/AssemblyInfo.cs -text
+Api/Types/Attachment.cs -text
 Api/Types/CustomField.cs -text
 Api/Types/IssueRelation.cs -text
 Api/Types/News.cs -text
 Api/Types/Project.cs -text
 Api/Types/User.cs -text
+Api/Types/Version.cs -text
 /Local.testsettings -text
 Test/Properties/AssemblyInfo.cs -text
 Test/Test.csproj -text
