--- a/.gitattributes
+++ b/.gitattributes
@@ -6,6 +6,7 @@ Api/Types/CustomField.cs -text
 Api/Types/IssueRelation.cs -text
 Api/Types/News.cs -text
 Api/Types/Project.cs -text
+Api/Types/Query.cs -text
 Api/Types/User.cs -text
 Api/Types/Version.cs -text
 /Local.testsettings -text
