--- a/.gitattributes
+++ b/.gitattributes
@@ -24,6 +24,7 @@ Test/Test[!!-~]References/Redmine.Net.Api.accessor -text
 Test/Test.csproj -text
 TestFiles/issues.xml -text
 TestFiles/projects.xml -text
+TestFiles/timeentries.xml -text
 /TraceAndTestImpact.testsettings -text
 /redmine-net-api.sln -text
 /redmine-net-api.vsmdi -text
