Added Detail, IssueCategory, IssueStatus, Journal, Tracker Added FixedVersion property to Issue Added User property to TimeEntry Added Multiple property to CustomField

--- a/.gitattributes
+++ b/.gitattributes
@@ -5,16 +5,21 @@ Api/Properties/AssemblyInfo.cs -text
 Api/RedmineManager.cs -text
 Api/Types/Attachment.cs -text
 Api/Types/CustomField.cs -text
+Api/Types/Detail.cs -text
 Api/Types/Identifiable.cs -text
 Api/Types/IdentifiableName.cs -text
 Api/Types/Issue.cs -text
+Api/Types/IssueCategory.cs -text
 Api/Types/IssueRelation.cs -text
+Api/Types/IssueStatus.cs -text
+Api/Types/Journal.cs -text
 Api/Types/Membership.cs -text
 Api/Types/News.cs -text
 Api/Types/Project.cs -text
 Api/Types/Query.cs -text
 Api/Types/Role.cs -text
 Api/Types/TimeEntry.cs -text
+Api/Types/Tracker.cs -text
 Api/Types/User.cs -text
 Api/Types/Version.cs -text
 /Local.testsettings -text
