--- a/.gitattributes
+++ b/.gitattributes
@@ -8,6 +8,7 @@ Api/Types/Attachment.cs -text
 Api/Types/ChangeSet.cs -text
 Api/Types/CustomField.cs -text
 Api/Types/Detail.cs -text
+Api/Types/Group.cs -text
 Api/Types/Identifiable.cs -text
 Api/Types/IdentifiableName.cs -text
 Api/Types/Issue.cs -text
@@ -27,7 +28,9 @@ Api/Types/TimeEntry.cs -text
 Api/Types/Tracker.cs -text
 Api/Types/Upload.cs -text
 Api/Types/User.cs -text
+Api/Types/UserGroup.cs -text
 Api/Types/Version.cs -text
+Api/create_issue_with_start_and_due_date.patch -text
 Api/parse_version_name_fix_20120516.patch -text
 Api/update_custom_fields_20120510.patch -text
 /Local.testsettings -text
