--- a/.gitattributes
+++ b/.gitattributes
@@ -2,6 +2,7 @@
 Api/Api.csproj -text
 Api/ExtensionAttribute.cs -text
 Api/ExtensionMethods.cs -text
+Api/GetTotalObjectList.patch -text
 Api/IssueWithAttachment.patch -text
 Api/Properties/AssemblyInfo.cs -text
 Api/RedmineException.cs -text
