Fixed: GetTotalList when using limit and PageSize Fixed: An empty CustomField.Values causes Internal Server Error Added: Summary to News. Added: Users to Group Added: JSON support Added: Async support Added: TimeEntryActivity, IssuePriority, WikiPage

--- a/.gitattributes
+++ b/.gitattributes
@@ -5,6 +5,32 @@ Api/ExtensionAttribute.cs -text
 Api/ExtensionMethods.cs -text
 Api/GetTotalObjectList.patch -text
 Api/IssueWithAttachment.patch -text
+Api/JSonConverters/AttachmentConverter.cs -text
+Api/JSonConverters/ChangeSetConverter.cs -text
+Api/JSonConverters/CustomFieldConverter.cs -text
+Api/JSonConverters/DetailConverter.cs -text
+Api/JSonConverters/ErrorConverter.cs -text
+Api/JSonConverters/GroupConverter.cs -text
+Api/JSonConverters/IdentifiableNameConverter.cs -text
+Api/JSonConverters/IssueCategoryConverter.cs -text
+Api/JSonConverters/IssueConverter.cs -text
+Api/JSonConverters/IssueRelationConverter.cs -text
+Api/JSonConverters/IssueStatusConverter.cs -text
+Api/JSonConverters/JournalConverter.cs -text
+Api/JSonConverters/MembershipConverter.cs -text
+Api/JSonConverters/MembershipRoleConverter.cs -text
+Api/JSonConverters/NewsConverter.cs -text
+Api/JSonConverters/ProjectConverter.cs -text
+Api/JSonConverters/ProjectMembershipConverter.cs -text
+Api/JSonConverters/ProjectTrackerConverter.cs -text
+Api/JSonConverters/QueryConverter.cs -text
+Api/JSonConverters/RoleConverter.cs -text
+Api/JSonConverters/TimeEntryConverter.cs -text
+Api/JSonConverters/TrackerConverter.cs -text
+Api/JSonConverters/UploadConverter.cs -text
+Api/JSonConverters/UserConverter.cs -text
+Api/JSonConverters/UserGroupConverter.cs -text
+Api/JSonConverters/VersionConverter.cs -text
 Api/Properties/AssemblyInfo.cs -text
 Api/RedmineException.cs -text
 Api/RedmineManager.cs -text
@@ -21,6 +47,7 @@ Api/Types/Identifiable.cs -text
 Api/Types/IdentifiableName.cs -text
 Api/Types/Issue.cs -text
 Api/Types/IssueCategory.cs -text
+Api/Types/IssuePriority.cs -text
 Api/Types/IssueRelation.cs -text
 Api/Types/IssueStatus.cs -text
 Api/Types/Journal.cs -text
@@ -33,20 +60,19 @@ Api/Types/ProjectTracker.cs -text
 Api/Types/Query.cs -text
 Api/Types/Role.cs -text
 Api/Types/TimeEntry.cs -text
+Api/Types/TimeEntryActivity.cs -text
 Api/Types/Tracker.cs -text
 Api/Types/Upload.cs -text
 Api/Types/User.cs -text
 Api/Types/UserGroup.cs -text
 Api/Types/Version.cs -text
+Api/Types/WikiPage.cs -text
 Api/Whitespace.patch -text
 Api/create_issue_with_start_and_due_date.patch -text
 Api/parse_version_name_fix_20120516.patch -text
 Api/update_custom_fields_20120510.patch -text
-/Local.testsettings -text
 Test/Properties/AssemblyInfo.cs -text
 Test/RedmineManagerTest.cs -text
 Test/Test[!!-~]References/Redmine.Net.Api.accessor -text
 Test/Test.csproj -text
-/TraceAndTestImpact.testsettings -text
 /redmine-net-api.sln -text
-/redmine-net-api.vsmdi -text
