--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,5 @@
 * text=auto !eol
+Api/AddChildrenToIssue.patch -text
 Api/Api.csproj -text
 Api/AttachmentDetailUser_Patches.patch -text
 Api/ChangeLog.txt -text
@@ -15,6 +16,7 @@ Api/JSonConverters/ErrorConverter.cs -text
 Api/JSonConverters/GroupConverter.cs -text
 Api/JSonConverters/IdentifiableNameConverter.cs -text
 Api/JSonConverters/IssueCategoryConverter.cs -text
+Api/JSonConverters/IssueChildConverter.cs -text
 Api/JSonConverters/IssueConverter.cs -text
 Api/JSonConverters/IssuePriorityConverter.cs -text
 Api/JSonConverters/IssueRelationConverter.cs -text
@@ -38,6 +40,7 @@ Api/JSonConverters/UserGroupConverter.cs -text
 Api/JSonConverters/VersionConverter.cs -text
 Api/JSonConverters/WikiPageConverter.cs -text
 Api/MimeFormat.cs -text
+Api/ParseTimeEntryCorrectly.patch -text
 Api/Properties/AssemblyInfo.cs -text
 Api/ReadElementAfterReadingRole.patch -text
 Api/ReadEmptyElementList.patch -text
@@ -60,6 +63,7 @@ Api/Types/Identifiable.cs -text
 Api/Types/IdentifiableName.cs -text
 Api/Types/Issue.cs -text
 Api/Types/IssueCategory.cs -text
+Api/Types/IssueChild.cs -text
 Api/Types/IssuePriority.cs -text
 Api/Types/IssueRelation.cs -text
 Api/Types/IssueStatus.cs -text
